# rust_studies

./: .gitignore  README.md
test04/: Cargo.toml
test04/src/: main.rs
test05/: Cargo.toml
test05/src/: main.rs
test06/: Cargo.toml
test06/src/: main.rs
test07/: Cargo.toml
test07/src/: gcd.rs  main.rs  test_gcd.rs
test08/: Cargo.toml
test08/src/: main.rs
test09/: Cargo.toml
test09/src/: main.rs
tst02/: Cargo.toml
tst02/src/: main.rs
tst03/: Cargo.toml
tst03/src/: main.rs
